Korrektur im Einführungsteil: - Verbesserte Bildbeschreibungen und Formeln

--- a/Acronym.tex
+++ b/Acronym.tex
@@ -12,23 +12,24 @@
 	\acro{VO2}[\.{V}O\textsubscript{2}]{Sauerstoffaufnahme}
 	\acro{ATP}{Adenosintriphosphat}
 	\acro{ADP}{Adenosindiphosphat}
-	\acro{Pi}[P\textsubscript{i}]{anorganisches Phosphat}
-	\acro{H20}[H\textsubscript{2}O]{Wasser}
+	\acro{P}[P\textsubscript{i}]{Phophatrest}
+	\acro{H2O}[H\textsubscript{2}O]{Wasser}
+	\acro{H+}[H\textsuperscript{+}]{Wasserstoff}
 	\acro{CrP}{Kreatinphosphat}
 	\acro{Cr}{Kreatin}
-	\acro{H+}[H\textsuperscript{+}]{Wasserstoff}
 	\acro{NADH}{Nicotinamidadenindinukleotid}
 	\acro{HLa}{Milchsäure}
 	\acro{La-}[La\textsuperscript{-}]{Laktat}
 	\acro{LDH}{Laktatdehydrogenase}
 	\acro{HCO3-}[HCO\textsubscript{3}\textsuperscript{-}]{Bicarbonat}
+	\acro{H2CO3}[H\textsubscript{2}CO\textsubscript{3}]{Kohlensäure}
 	\acro{RCP}{Respiratorischer Kompensationspunkt nach Wasserman (1981)}
 	\acro{MLSS}{Maximales Laktat-Steady-State}
 	\acro{VE}[\.{V}E]{Ventilation}
 	\acro{AMV}{Atemminutenvolumen}
-	\acro{FIO2}{Fraktion des inspirierten Sauerstoffs}
-	\acro{FEO2}{Fraktion des exspirierten Sauerstoffs}
-	\acro{FECO2}{Fraktion des exspirierten Kohlenstoffdioxids}
+	\acro{FIO2}[FIO\textsubscript{2}]{Fraktion des inspirierten Sauerstoffs}
+	\acro{FEO2}[FEO\textsubscript{2}]{Fraktion des exspirierten Sauerstoffs}
+	\acro{FECO2}[FECO\textsubscript{2}]{Fraktion des exspirierten Kohlenstoffdioxids}
 	\acro{COPD}{chronisch obstruktive Lungenerkrankung}
 	\acro{EQCO2}[EQCO\textsubscript{2}]{Kohlenstoffdioxid-Äquivalent}
 	\acro{EQO2}[EQO\textsubscript{2}]{Sauerstoff-Äquivalent}
